# portfolio

./: pyproject.toml
mainbook/: _config.yml  _toc.yml
mainbook/content/professional/: cv.md  work.md
myfirstbook/_build/.doctrees/: environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
myfirstbook/_build/html/: .buildinfo
myfirstbook/_build/jupyter_execute/: markdown-notebooks.ipynb
